# PlateRecognition

./: .gitignore  CMakeLists.txt  README.md
include/: database.hpp  inference.h
src/: database.cpp  inference.cpp  kalman_box_tracker.cpp  kuhn_munkres.cpp  main-ultralytics.cpp  main.cpp  sort.cpp
